@@ -1,1 +1,2 @@
 add_subdirectory(en)
+add_subdirectory(hy)
